[package]
name = "fleek-service-ai"
version = "0.0.0"
edition.workspace = true

[dependencies]
anyhow.workspace = true
base64.workspace = true
borsh = { version = "1.3"}
bytes = { version = "1.5", features = ["serde"] }
derive_more = "0.99"
fn-sdk = { path = "../../lib/sdk" }
hex = "0.4"
ndarray = "0.15"
safetensors = "0.4"
safetensors-ndarray = { path = "../../lib/safetensors-ndarray" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber = { version = "0.3", features = [ "env-filter" ] }
tract-onnx = { git = "https://github.com/sonos/tract" }
url ="2.5.0"

[[bin]]
name = "fn-service-2"
path = "src/bin.rs"
